Adds css styling/fonts

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Quicksand';
 }
 
 #root {
@@ -9,6 +9,7 @@ body {
 }
 
 /*Navbar*/
+
 button.navbar-btn {
   float: right;
 }
