--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1.2em;
-  font-family: 'Quicksand';
+  font-family: 'Quicksand', sans-serif;
 }
 
 #root {
@@ -10,6 +10,17 @@ body {
 }
 
 /*Navbar*/
+span.patient-name-nav {
+  float: right;
+}
+
+p.patient-name-nav {
+  font-size: 1.5em;
+}
+
+li {
+  margin: 0.5em;
+}
 
 button.navbar-btn {
   float: right;
