--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1.2em;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #root {
@@ -94,6 +94,38 @@ button.aptbtn:hover {
   background-color: #F48302;
   color: white;
   border-color: #F48302;
+}
+
+button.aptbtn-delete {
+  float: right;
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
+  background-color: #65bace;
+  border-color: #5ba8ba;
+  margin-left: 0.5em;
+  color: white;
+}
+
+button.aptbtn-delete:hover {
+  background-color: #5ba8ba;
+  color: white;
+  border-color: #5ba8ba;
+}
+
+button.aptbtn-details {
+  float: right;
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
+  background-color: #5ba8ba;
+  border-color: #498999;
+  margin-left: 0.5em;
+  color: white;
+}
+
+button.aptbtn-details:hover {
+  background-color: #498999;
+  color: white;
+  border-color: #498999;
 }
 
 div.time-col {
