--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -27,11 +27,6 @@ button.navbar-btn {
   margin-left: 15px;
   color: white;
 }
-/* 
-button.navbar-btn:hover {
-  background-color: #F39801;
-  border-color: #F39801;
-} */
 
 span.nav-name {
   font-size: 1.2em;
@@ -52,6 +47,47 @@ a.nav-brand {
 nav.navbar {
   background-color: #92B7BF;
 }
+
+
+div.backgroundImgContainer img {
+  z-index: 50;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  }
+  
+  .tofront {
+    z-index: 50;
+    position: relative;
+  }
+  
+  div.opacity {
+    background-color: white;
+    background: rgba(255,255,255,0.8);
+    float: left;
+    position: relative;
+    margin-right: 1em;
+   
+  }
+  
+  h1.tagline {
+    font-size: 8em;
+    color: white;
+    margin-top: 0.1em;
+    
+  
+  }
+  
+  h1.tagline2 {
+    font-size: 8em;
+    color: white;
+    margin-top: -0.59em;
+  }
+  
+  nav.navbar {
+    box-shadow: 3px 2px 30px 1px darkgray;
+  
+  }
 
 
 /*Home Page*/
@@ -230,65 +266,25 @@ div.main {
   margin: 0.8em;
   padding: 0.7em;
   border-color: lightgray;
+  width: 100%;
 }
 
 li {
   list-style-type: none;
 }
 
-div.backgroundImgContainer img {
-z-index: 50;
-position: fixed;
-width: 100%;
-height: 100%;
-}
-
-.tofront {
-  z-index: 50;
-  position: relative;
-}
-
-div.opacity {
-  background-color: white;
-  background: rgba(255,255,255,0.8);
-  float: left;
-  position: relative;
-  margin-right: 1em;
- 
-}
-
-h1.tagline {
-  font-size: 8em;
-  color: white;
-  margin-top: 0.1em;
-  
-
-}
-
-h1.tagline2 {
-  font-size: 8em;
-  color: white;
-  margin-top: -0.59em;
-}
-
-nav.navbar {
-  box-shadow: 3px 2px 30px 1px darkgray;
-
-}
 
 .cal {
   margin-top: 3em;
 }
 
 .calendar {
-  float: left;
-  clear: right;
-  margin-right: 2em;
+justify-content: right;
 }
 
-div.appts {
+.appts {
   float: left;
-  
+  justify-content: left;
 }
 
 div.logincont {
@@ -304,3 +300,4 @@ h2.logintitle {
   padding: 1.5em;
   width: 100%;
 }
+
